test/src/e2e_vm_tests/test_programs/should_pass/dca/library/unused_pub_free_fn/src/main.sw
library;

pub fn free_fn() {}
